[package]
name = "karga"
version = "0.3.1"
edition = "2021"
authors = ["Degarti <outragedline@proton.me>"]
license = "MIT"
readme = "./README.md"
description = "A small, flexible load-testing framework for Rust"
repository = "https://github.com/karga-rs/karga"
keywords = ["loadtesting", "benchmark", "rps", "performance", "framework"]
categories = ["development-tools::profiling"]
publish = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
typed-builder = "0.21"
futures = "0.3.31"
num_cpus = "1.16"
tracing = "0.1"

[dev-dependencies]
reqwest = "0.12"
tracing-subscriber = "0.3"
[features]
builtins = []
internals = []
default = ["builtins"]
