[package]
name = "karga"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
rayon = "1.11"
typed-builder = "0.21"
karga_macros = { path = "../karga_macros", optional = true }
futures = "0.3.31"
num_cpus = "1.16"

[dev-dependencies]
reqwest = "0.12"

[features]
macros = ["dep:karga_macros"]
builtins = ["macros"]
default = ["builtins"]
