[package]
name = "karga"
version = "0.2.0"
edition = "2024"
authors = ["Degarti <outragedline@proton.me>"]
license = "MIT"
readme = "../README.md"
description = "A small, flexible load-testing framework for Rust"
repository = "https://github.com/outragedline/karga"
keywords = ["loadtesting", "benchmark", "rps", "performance", "framework"]
categories = ["development-tools::profiling"]
publish = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
rayon = "1.11"
typed-builder = "0.21"
karga_macros = { path = "../karga_macros", version = "0.1", optional = true }
futures = "0.3.31"
num_cpus = "1.16"
tracing = "0.1"

[dev-dependencies]
reqwest = "0.12"
tracing-subscriber = "0.3"
[features]
macros = ["dep:karga_macros"]
builtins = ["macros"]
internals = []
default = ["builtins"]
